# specops

./: .gitignore  BUILD.bazel  MODULE.bazel  NOTICE  README.md  compile.go  debugui.go  examples_test.go  go.mod  go.sum  opcodes.gen.go  pushlabels_test.go  run.go  specialops.go  specialops_test.go  specops.go  specops_test.go  stack.go  tags.go  tags_test.go
.github/workflows/: bazel.yml  go.yml
evmdebug/: BUILD.bazel  evmdebug.go  sync_test.go  ui.go
getting-started/: BUILD.bazel  README.md  getting-started.spec.go
internal/opcopy/: BUILD.bazel  main.go
internal/patches/: com_github_ethereum_go_ethereum.patch
internal/sync/: BUILD.bazel  LICENSE  README.md  doc.go  toggle.go  toggle_test.go
jump/: BUILD.bazel  jump.go  table.go  table_test.go
revert/: BUILD.bazel  revert.go
runopts/: BUILD.bazel  capture.go  debugger.go  debugger_test.go  runopts.go  runopts_test.go
specopscli/: BUILD.bazel  specopscli.go
specopsdev/: BUILD.bazel  specopsdev.go
stack/: BUILD.bazel  stack.go  transform.go  transform_test.go
types/: BUILD.bazel  types.go
