"solidifylabs/specops"

module(
    name = "solidifylabs_specops",
    version = "0.0.0",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.5.1")

bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "gazelle", version = "0.35.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.20.3")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

use_repo(
    go_deps,
    "com_github_ethereum_go_ethereum",
    "com_github_gdamore_tcell_v2",
    "com_github_google_go_cmp",
    "com_github_holiman_uint256",
    "com_github_rivo_tview",
    "com_github_spf13_cobra",
    "org_golang_x_sync",
)

go_deps.module_override(
    patches = [
        "//internal/patches:com_github_ethereum_go_ethereum.patch",
    ],
    path = "github.com/ethereum/go-ethereum",
)
