load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "evmdebug",
    srcs = [
        "evmdebug.go",
        "ui.go",
    ],
    importpath = "github.com/solidifylabs/specops/evmdebug",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/sync",
        "@com_github_ethereum_go_ethereum//core/tracing",
        "@com_github_ethereum_go_ethereum//core/vm",
        "@com_github_gdamore_tcell_v2//:tcell",
        "@com_github_holiman_uint256//:uint256",
        "@com_github_rivo_tview//:tview",
    ],
)

go_test(
    name = "evmdebug_test",
    srcs = ["sync_test.go"],
    deps = ["//:specops"],
)
