load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sync",
    srcs = [
        "doc.go",
        "toggle.go",
    ],
    importpath = "github.com/solidifylabs/specops/internal/sync",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "sync_test",
    srcs = ["toggle_test.go"],
    embed = [":sync"],
    deps = ["@org_golang_x_sync//errgroup"],
)
